fixed aos blank space on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html{
   scroll-behavior: smooth;
   background: transparent;
 }
+body{overflow-x: hidden}
 .App {
   text-align: center;
   background: transparent;
